message FoodComponentData
{
	enum FoodType 
	{
		SingleFood = 0;
		CompositeFood = 1;
	}
	
	optional int32 id = 1;
	
	optional int32 foodId = 2;
	
	optional FoodType foodType = 3;
	
	optional double amount = 4;
	
	optional string unitAbbreviation = 5 [default = "g"];
	
	optional bool includesRefuse = 6;

	optional int32 order = 7;	
}

message ComponentModification
{
	optional int32 oldComponentId = 2;

	optional int32 newComponentId = 3;
	
	optional int32 oldOrder = 4;
	
	optional int32 newOrder = 5;
}
